--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,11 @@
         <!-- uom -->
         <dependency>
             <groupId>systems.uom</groupId>
+            <artifactId>systems-ucum</artifactId>
+            <version>0.9</version>
+        </dependency>
+        <dependency>
+            <groupId>systems.uom</groupId>
             <artifactId>systems-quantity</artifactId>
             <version>0.9</version>
         </dependency>
